--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,9 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "cSpell.words": [
     "createarray",
-    "displayq"
+    "displayq",
+    "infi",
+    "subarray",
+    "subarrays"
   ]
 }
