--- a/Sorting/.vscode/settings.json
+++ b/Sorting/.vscode/settings.json
@@ -55,17 +55,5 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "cSpell.words": [
-    "createarray",
-    "displayq",
-    "heapify",
-    "heapsize",
-    "infi",
-    "malloc",
-    "scanf",
-    "stdlib",
-    "subarray",
-    "subarrays"
-  ]
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
